--- 3.0.45 2009/03/31

Fixed bug #2709: TCP connect returns Invalid argument.

Fixed compilation for mingw.

Honor charset for raw records (ZOOM_record_get).

Fixed use of errno for threaded mode that was seen on Solaris 10.

Fixed argument passing with blanks in value for Windows Service.

Disable YAZ' own log rotate by default (no 1 GB limit).
The variable l_max_size which specifies the log file limit is set to 0
(DISABLED): This is due to the fact that YAZ is most often deployed using
logrotate. Also YAZ can not perform log rotate because of unsufficient
permissions (setuid).

--- 3.0.44 2009/02/17

List supported encodings in man page for yaz-iconv.

Fixed missing SSL libs for --libs output

Re-established OID record syntax application-xml. Nobody should use it
but we don't want to change soname because of this symbol being absent.

--- 3.0.42 2009/02/02

YAZ' RPM spec works for both SUSE Linux Enterprise and RedHat Fedora.

Added member named_result_sets for init handler struct for the GFS. This
allows a server to disable named result sets.

Removed OID record syntax application-xml.

Added support for rule-based transliterator for ICU wrapper of YAZ.

Fixed bug #1902: yaz-icu XML output.

Make YAZ checks Emacs friendly.

BITSTRING value shows value. Bug #2346.

ISO2709 decoding: skip control characters from indicator data.

Omit sort key by default in yaz-icu's output.

Allow combined single char options (again) for YAZ' options function.

Utility yaz-marcdump got option to display YAZ version (-V).

Allow YAZ to use ICU 3.4.

Added new ICU test case which illustrates removal of diacritics.

--- 3.0.41 2008/12/29

Fixed Fixed test that makes VERSION_SHA1 appear on dist versions too.

--- 3.0.40 2008/12/29

For configure, using option --without-xml2 also disables Libxslt/Libexslt
support.

Fixed bug #2352: yaz-marcdump crashes for certain record.

Added man page 'bib1-attr' which includes list of common Bib-1 attributes.
